[Code Smells] removed code smells