@@ -2,15 +2,15 @@ package com.dashboard.doctor_dashboard.services.receptionist;
 
 import com.dashboard.doctor_dashboard.entities.Appointment;
 import com.dashboard.doctor_dashboard.entities.Attributes;
-import com.dashboard.doctor_dashboard.util.Constants;
-import com.dashboard.doctor_dashboard.entities.dtos.GenericMessage;
+import com.dashboard.doctor_dashboard.entities.dtos.AttributesDto;
 import com.dashboard.doctor_dashboard.entities.dtos.PatientViewDto;
-
 import com.dashboard.doctor_dashboard.exceptions.APIException;
 import com.dashboard.doctor_dashboard.exceptions.ResourceNotFoundException;
 import com.dashboard.doctor_dashboard.repository.AppointmentRepository;
 import com.dashboard.doctor_dashboard.repository.AttributeRepository;
 import com.dashboard.doctor_dashboard.repository.DoctorRepository;
+import com.dashboard.doctor_dashboard.util.Constants;
+import com.dashboard.doctor_dashboard.util.wrappers.GenericMessage;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
@@ -24,47 +24,43 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
-public class RecetionistServiceImpl implements ReceptionistService {
-    @Autowired
+public class ReceptionistServiceImpl implements ReceptionistService {
+
     private ModelMapper mapper;
+
+    private DoctorRepository doctorRepository;
+
+    private AppointmentRepository appointmentRepository;
+
+    private AttributeRepository attributeRepository;
     @Autowired
-    DoctorRepository doctorRepository;
-    @Autowired
-    AppointmentRepository appointmentRepository;
-    @Autowired
-    AttributeRepository attributeRepository;
+    public ReceptionistServiceImpl(ModelMapper mapper, DoctorRepository doctorRepository, AppointmentRepository appointmentRepository, AttributeRepository attributeRepository) {
+        this.mapper = mapper;
+        this.doctorRepository = doctorRepository;
+        this.appointmentRepository = appointmentRepository;
+        this.attributeRepository = attributeRepository;
+    }
+
     @Override
-    public ResponseEntity<GenericMessage> getDoctorDetails(int pageNo) {
-        Pageable paging = PageRequest.of(pageNo, 10);
-      return new ResponseEntity<>(new GenericMessage(Constants.SUCCESS, doctorRepository.getDoctorDetails(paging).toList()),HttpStatus.OK);
+    public ResponseEntity<GenericMessage> getDoctorDetails() {
+      return new ResponseEntity<>(new GenericMessage(Constants.SUCCESS, doctorRepository.getDoctorDetails()),HttpStatus.OK);
 
     }
 
     @Override
     public ResponseEntity<GenericMessage> getDoctorAppointments(Long doctorId,int pageNo) {
         Pageable paging = PageRequest.of(pageNo, 10);
+        if(doctorRepository.isIdAvailable(doctorId) != null) {
+            List<Appointment> appointmentList = appointmentRepository.receptionistDoctorAppointment(doctorId,paging).toList();
 
-        List<Appointment> appointmentList = appointmentRepository.receptionistDoctorAppointment(doctorId,paging).toList();
-
-        List<PatientViewDto> patientViewDto = appointmentList.stream()
-                .map(this::mapToDto2).collect(Collectors.toList());
-        return new ResponseEntity<>(new GenericMessage(Constants.SUCCESS , patientViewDto),HttpStatus.OK);
+            List<PatientViewDto> patientViewDto = appointmentList.stream()
+                    .map(this::mapToDto2).collect(Collectors.toList());
+            return new ResponseEntity<>(new GenericMessage(Constants.SUCCESS, patientViewDto), HttpStatus.OK);
+        }
+        throw new ResourceNotFoundException(Constants.DOCTOR_NOT_FOUND);
     }
 
 
-
-
-//    @Override
-//    public ResponseEntity<GenericMessage> updateAppointmentVitals(VitalsDto attributes, long appointmentId) {
-//        if(appointmentRepository.existsById(appointmentId)){
-//            attributeRepository.updateVitals(attributes.getBloodPressure(),attributes.getBodyTemp(),attributes.getGlucoseLevel(),appointmentId);
-//            appointmentRepository.setStatus("Vitals updated",appointmentId);
-//            return new ResponseEntity<>(new GenericMessage(Constants.SUCCESS,"successful"), HttpStatus.OK);
-//        }
-//
-//            throw new ResourceNotFoundException("appointments","id",appointmentId);
-//
-//    }
 
     @Override
     public ResponseEntity<GenericMessage> todayAllAppointmentForClinicStaff(int pageNo) {
@@ -81,18 +77,18 @@ public class RecetionistServiceImpl implements ReceptionistService {
     }
 
     @Override
-    public ResponseEntity<GenericMessage> addAppointmentVitals(Attributes vitalsDto, Long appointmentId) {
+    public ResponseEntity<GenericMessage> addAppointmentVitals(AttributesDto vitalsDto, Long appointmentId) {
         if(appointmentRepository.existsById(appointmentId)){
             if(attributeRepository.checkAppointmentPresent(appointmentId) == null){
                 appointmentRepository.setStatus("Vitals updated",appointmentId);
-                attributeRepository.save(vitalsDto);
+                attributeRepository.save(mapper.map(vitalsDto,Attributes.class));
                return new ResponseEntity<>(new GenericMessage(Constants.SUCCESS,"successful"), HttpStatus.OK);
              }
             else
-                throw new APIException(HttpStatus.BAD_REQUEST,"update not allowed in this API endpoint.");
+                throw new APIException("update not allowed in this API endpoint.");
 
         }
-        throw new ResourceNotFoundException(Constants.APPOINTMENT_NOT_FOUND,"id",appointmentId);
+        throw new ResourceNotFoundException(Constants.APPOINTMENT_NOT_FOUND);
 
     }
 
